--- a/fg/opt_page/options.html
+++ b/fg/opt_page/options.html
@@ -10,10 +10,10 @@
 	
 	<link rel="stylesheet" href="chrome://browser/content/extension.css">
 	<link rel="stylesheet" href="../deps/json/json-formatter.css">
-	<link rel="stylesheet" href="../deps/allmighty-autocomplete/style/autocomplete.css">
-	<link rel="stylesheet" href="../styles/angular-material.min.css">
+	<link rel="stylesheet" href="../deps/angucomplete-alt/angucomplete-alt.css">
 	<link rel="stylesheet" href="../styles/tabs.css">
 	<link rel="stylesheet" href="../styles/script-list.css">
+	<!-- <link rel="stylesheet" href="../styles/autocomplete.css"> -->
 	
 	<link rel="stylesheet" href="../deps/angular-highlightjs-searchtext/build/release/angular-highlightjs-searchtext.min.css">
 	
@@ -21,7 +21,9 @@
 	<script src="../deps/angular.min.js"></script>
 	<script src="../deps/angular-ui-router.min.js"></script>
 	<script src="../deps/highlightjs/highlight.min.js"></script>
-	<script src="../deps/allmighty-autocomplete/script/autocomplete.js"></script>
+	<script src="../deps/angucomplete-alt/angucomplete-alt.js"></script>
+	<!-- <script src="../deps/angucomplete/angucomplete.js"></script> -->
+	<!-- <script src="../deps/angucomplete-alt/dist/angucomplete-alt.min.js"></script> -->
 	<script src="../deps/angular-highlightjs-searchtext/build/release/angular-highlightjs-searchtext.min.js"></script>
 	<script src="../partials/partials.js"></script>
 	
