JSL Alpha 2: RuleMgr ++ (Proxy rules)

--- a/fg/editor/editor.html
+++ b/fg/editor/editor.html
@@ -14,6 +14,7 @@
 	<script src="../deps/ace/src-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../../utils/jsloader-utils.js" type="text/javascript" charset="utf-8"></script>
 
+	<script src="../deps/angucomplete-alt/angucomplete-alt.js"></script>
 	<script src="../deps/highlightjs/highlight.min.js"></script>
 	<script src="../deps/angular-highlightjs-searchtext/build/release/angular-highlightjs-searchtext.min.js"></script>
 	<script src="../partials/partials.js"></script>
@@ -54,7 +55,8 @@
 	  </button>
 	  
 	</div>
-	 	
+
+	<script src="../deps/json/json-formatter.js"></script>
 	<script src="editor.js"></script>
 	
   </body>
