--- a/fg/opt_page/rules.html
+++ b/fg/opt_page/rules.html
@@ -1,22 +1,38 @@
-<div class="panel-section" >
-  <div id="rules_head" class="panel-section-header">
-	<div class="text-section-header">{{title}}
-	  <label class="input_import" style="float:right;">
-		<input id="import_scripts" class="browser-style" type="file"></input>
-	  </label>
-	  <button style="float:right;" class="browser-style" ng-show="import_button" ng-click="applyImport()"> Apply changes </button>
-	</div>
+<div id="rules_head" class="panel-section-header panel-section">
+  <div class="text-section-header">{{title}}
+	<label class="input_import" style="float:right;">
+	  <input id="import_scripts" class="browser-style" type="file"></input>
+	</label>
+	<button style="float:right;" class="browser-style" ng-show="import_button" ng-click="applyImport()"> Apply changes </button>
   </div>
-</div><br></br>
+</div>
 
-<ul ng-if="rules.length">
-  <li ng-repeat="rule in rules track by rule.id">
-	
-	<a-rule rule="rule"></a-rule>
-	
-  </li>
-</ul>
+<div class="panel-section">
+  
+  <h4> Proxy Rules <bdi style="color:red" ng-click="toggleProxy()"> {{ statusProxy() }} </bdi></h4>
+  
+  <ul ng-if="proxy_rules.length" ng-show="proxy_shown">
+	<li ng-repeat="proxy_rule in proxy_rules track by proxy_rule.host">
+	  
+	  <a-proxy-rule rule="proxy_rule" pnames="names" mgr="mgr"></a-proxy-rule>
+	  
+	</li>
+  </ul>
+  
+  <button class="browser-style" ng-click="addProxyRule()" ng-show="proxy_shown"> {{ proxy_rules.length ? "+" : "New Proxy Rule" }} </button>
+</div>
 
-<button class="browser-style" ng-click="addRule()"> {{ rules.length ? "+" : "New Rule" }} </button>
-
-<no-info ng-if="!rules.length"></no-info>
+<div class="panel-section">
+  
+  <h4> Request Rules <bdi style="color:red" ng-click="toggleReq()"> {{ statusReq() }} </bdi></h4>
+  
+  <ul ng-if="rules.length" ng-show="req_shown">
+	<li ng-repeat="rule in rules track by rule.id">
+	  
+	  <a-rule rule="rule"></a-rule>
+	  
+	</li>
+  </ul>
+  
+  <button class="browser-style" ng-click="addRule()" ng-show="req_shown"> {{ rules.length ? "+" : "New Rule" }} </button>
+</div>
