--- a/fg/opt_page/rules.html
+++ b/fg/opt_page/rules.html
@@ -7,7 +7,7 @@
   </div>
 </div>
 
-<div class="panel-section">
+<div class="panel-section" ng-show="names.length">
   
   <h4> Proxy Rules <bdi style="color:red" ng-click="toggleProxy()"> {{ statusProxy() }} </bdi></h4>
   
