--- a/fg/page_action/pa.html
+++ b/fg/page_action/pa.html
@@ -1,51 +1,53 @@
 <!DOCTYPE html>
 
 <html>
-	<head ng-controller="headController">
+  <head ng-controller="headController">
 	
-		<meta charset="utf-8">
-		<link rel="stylesheet" href="pa.css">
-		<link rel="stylesheet" href="chrome://browser/content/extension.css">
-		<link ng-if="!page.bg.option_mgr.editor.theme.knownToHl" rel="stylesheet" ng-href="../deps/highlightjs/default.min.css">
-		<link ng-if="page.bg.option_mgr.editor.theme.knownToHl" rel="stylesheet" ng-href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/{{page.bg.option_mgr.editor.theme.knownToHl}}.min.css">		
-		<link rel="stylesheet" href="../deps/angular-highlightjs-searchtext/build/release/angular-highlightjs-searchtext.min.css">
-		<link rel="stylesheet" href="../styles/script-list.css">
-		
-		<script src="../deps/jquery.min.js"></script>
-		<script src="../deps/angular.min.js"></script>
-		<script src="../deps/angular-ui-router.min.js"></script>
-		<script src="../deps/highlightjs/highlight.min.js"></script>
-		<script src="../deps/angular-highlightjs-searchtext/build/release/angular-highlightjs-searchtext.min.js"></script>
-		<script src="../partials/partials.js"></script>
-		<script src="../../utils/jsloader-utils.js"></script>
-		<script src="../../utils/deps/async.min.js"></script>
-		
-	</head>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="pa.css">
+	<link rel="stylesheet" href="chrome://browser/content/extension.css">
+	<link ng-if="!page.bg.option_mgr.editor.theme.knownToHl" rel="stylesheet" ng-href="../deps/highlightjs/default.min.css">
+	<link ng-if="page.bg.option_mgr.editor.theme.knownToHl" rel="stylesheet" ng-href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/{{page.bg.option_mgr.editor.theme.knownToHl}}.min.css">		
+	<link rel="stylesheet" href="../deps/angular-highlightjs-searchtext/build/release/angular-highlightjs-searchtext.min.css">
+	<link rel="stylesheet" href="../styles/script-list.css">
 	
-	<body ng-controller="siteController" ui-sref="pa-site" spellcheck="false">
-			
-	  <div class="panel-section panel-section-header">
-		<div class="text-section-header">JSLoader</div>
-	  </div>
-		
-	  <div ng-if="info.domain[0].scripts.length">
-		<div ui-view="domain"></div>
-	  </div>
-	  
-	  <div ng-if="info.site[0].scripts.length">
-		<div ui-view="site"></div>
-	  </div>
-	  
-	  <div ng-if="info.subdomains.length">
-		<div ui-view="subdomains"></div>
-	  </div>
-	  
-	  <div ng-if="info.groups.length">
-		<div ui-view="groups"></div>
-	  </div>
-	  
-	  <script src="pa.js"></script>
-	  
-	</body>
+	<script src="../deps/jquery.min.js"></script>
+	<script src="../deps/angular.min.js"></script>
+	<script src="../deps/angucomplete-alt/angucomplete-alt.js"></script>
+	<script src="../deps/angular-ui-router.min.js"></script>
+	<script src="../deps/highlightjs/highlight.min.js"></script>
+	<script src="../deps/angular-highlightjs-searchtext/build/release/angular-highlightjs-searchtext.min.js"></script>
+	<script src="../partials/partials.js"></script>
+	<script src="../../utils/jsloader-utils.js"></script>
+	<script src="../../utils/deps/async.min.js"></script>
+	
+  </head>
+  
+  <body ng-controller="siteController" ui-sref="pa-site" spellcheck="false">
+	
+	<div class="panel-section panel-section-header">
+	  <div class="text-section-header">JSLoader</div>
+	</div>
+	
+	<div ng-if="info.domain[0].scripts.length">
+	  <div ui-view="domain"></div>
+	</div>
+	
+	<div ng-if="info.site[0].scripts.length">
+	  <div ui-view="site"></div>
+	</div>
+	
+	<div ng-if="info.subdomains.length">
+	  <div ui-view="subdomains"></div>
+	</div>
+	
+	<div ng-if="info.groups.length">
+	  <div ui-view="groups"></div>
+	</div>
+
+	<script src="../deps/json/json-formatter.js"></script>
+	<script src="pa.js"></script>
+	
+  </body>
 
 </html>
