--- a/fg/opt_page/options.html
+++ b/fg/opt_page/options.html
@@ -1,61 +1,68 @@
 <!DOCTYPE html>
 
 <html>
-  <head ng-controller="themeController">
-	
-	
-	<link rel="stylesheet" href="options.css"/>
-	
-	<meta charset="utf-8" http-equiv="Content-Security-Policy" content="script-src 'self' * 'unsafe-eval'; object-src 'self';">
-	
-	<link rel="stylesheet" href="chrome://browser/content/extension.css">
-	<link rel="stylesheet" href="../deps/json/json-formatter.css">
-	<link rel="stylesheet" href="../deps/angucomplete-alt/angucomplete-alt.css">
-	<link rel="stylesheet" href="../styles/tabs.css">
-	<link rel="stylesheet" href="../styles/script-list.css">
+	<head ng-controller="themeController">
+		
+		<link rel="stylesheet" href="options.css"/>
+		
+		<meta charset="utf-8" http-equiv="Content-Security-Policy" content="script-src 'self' * 'unsafe-eval'; object-src 'self';">
+		
+		<link rel="stylesheet" href="chrome://browser/content/extension.css">
+		<link rel="stylesheet" href="../deps/json/json-formatter.css">
+		<link rel="stylesheet" href="../deps/angucomplete-alt/angucomplete-alt.css">
+		<link rel="stylesheet" href="../styles/tabs.css">
+		<link rel="stylesheet" href="../styles/script-list.css">
 	<!-- <link rel="stylesheet" href="../styles/autocomplete.css"> -->
-	
-	<link rel="stylesheet" href="../deps/angular-highlightjs-searchtext/build/release/angular-highlightjs-searchtext.min.css">
-	
-	<script src="../deps/jquery.min.js"></script>
-	<script src="../deps/angular.min.js"></script>
-	<script src="../deps/angular-ui-router.min.js"></script>
-	<script src="../deps/highlightjs/highlight.min.js"></script>
-	<script src="../deps/angucomplete-alt/angucomplete-alt.js"></script>
+		
+		<link rel="stylesheet" href="../deps/angular-highlightjs-searchtext/build/release/angular-highlightjs-searchtext.min.css">
+		
+		<script src="../deps/jquery.min.js"></script>
+		<script src="../deps/angular.min.js"></script>
+		<script src="../deps/angular-ui-router.min.js"></script>
+		<script src="../deps/highlightjs/highlight.min.js"></script>
+		<script src="../deps/angucomplete-alt/angucomplete-alt.js"></script>
 	<!-- <script src="../deps/angucomplete/angucomplete.js"></script> -->
 	<!-- <script src="../deps/angucomplete-alt/dist/angucomplete-alt.min.js"></script> -->
-	<script src="../deps/angular-highlightjs-searchtext/build/release/angular-highlightjs-searchtext.min.js"></script>
-	<script src="../partials/partials.js"></script>
+		<script src="../deps/angular-highlightjs-searchtext/build/release/angular-highlightjs-searchtext.min.js"></script>
+		<script src="../partials/partials.js"></script>
+		
+		<script src="../../utils/jsloader-utils.js"></script>
+		<script src="../../utils/deps/async.min.js"></script>
+		<script src="../../utils/deps/underscore-min.js"></script>
+		<script src="../../utils/deps/EventEmitter/EventEmitter.min.js"></script>
+		
+		<link ng-if="!current.knownToHl" rel="stylesheet" ng-href="../deps/highlightjs/default.min.css">
+		<link ng-if="current.knownToHl" rel="stylesheet" ng-href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/{{current.knownToHl}}.min.css">
+		
+	</head>
 	
-	<script src="../../utils/jsloader-utils.js"></script>
-	<script src="../../utils/deps/async.min.js"></script>
-	<script src="../../utils/deps/underscore-min.js"></script>
-	<script src="../../utils/deps/EventEmitter/EventEmitter.min.js"></script>
-	
-	<link ng-if="!current.knownToHl" rel="stylesheet" ng-href="../deps/highlightjs/default.min.css">
-	<link ng-if="current.knownToHl" rel="stylesheet" ng-href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/{{current.knownToHl}}.min.css">
-	
-  </head>
-  
-  <body ng-controller="tabsController" spellcheck="false">
-	  
-	  <nav style="padding-left: 5px;">
-		  <div class="td-tab-nav">
-			  <a ng-repeat="tab in tabs"
-				  class="td-tab-link"
-				  id="tab-{{tab.sref}}"
-				  ui-sref="{{tab.sref}}">
-				  {{ tab.title }}
-			  </a>
-		  </div>
-	  </nav>
-	  
-	  <div id="content" class="td-tab-content">
-		<ui-view></ui-view>
-	  </div>
-	
-	  <script src="../deps/json/json-formatter.js"></script>
-	  <script src="options.js"></script>
-	 
-  </body>
+	<body ng-controller="tabsController" spellcheck="false">
+		
+		<nav style="padding-left: 5px;">
+			<div class="td-tab-nav">
+				<a ng-repeat="tab in tabs"
+					class="td-tab-link"
+					id="tab-{{tab.sref}}"
+					ui-sref="{{tab.sref}}">
+					{{ tab.title }}
+				</a>
+			</div>
+		</nav>
+		
+		<div id="inout_head" class="panel-section-header panel-section" ng-show="inoutOk()">
+			<div class="text-section-header browser-style">Stored {{active}}
+				<button style="float:right;" class="browser-style" ng-click="dataExport()"> Export {{active}} </button>
+				<button style="float:right;" class="browser-style" ng-show="import_data_button" ng-click="applyDataImport()"> Apply changes </button>
+				<input style="float:right;" id="import_data" type="file" value="Import {{active}}"></input>
+			</div>
+		</div>
+		
+		<div id="content" class="td-tab-content">
+			<ui-view></ui-view>
+		</div>
+		
+		<script src="../deps/json/json-formatter.js"></script>
+		<script src="options.js"></script>
+		
+	</body>
 </html>
