Data Origin feature ===> alpha 1, Import of groups & domains serialized.

--- a/fg/opt_page/options.html
+++ b/fg/opt_page/options.html
@@ -51,6 +51,12 @@
 		
 		<div id="inout_head" class="panel-section-header panel-section" ng-show="inoutOk()">
 			<div class="text-section-header browser-style">Stored {{active}}
+
+				<div class="browser-style" style="float:right;" ng-show="databaseOk()">
+					<button style="float:right;" class="browser-style" ng-click="dbFeed()"> Update {{active}} from DB </button>
+					<button style="float:right;" class="browser-style" ng-click="dbPush()"> Push {{active}} to DB </button>
+				</div>
+				
 				<button style="float:right;" class="browser-style" ng-click="dataExport()"> Export {{active}} </button>
 				<button style="float:right;" class="browser-style" ng-show="import_data_button" ng-click="applyDataImport()"> Apply changes </button>
 				<input style="float:right;" id="import_data" type="file" value="Import {{active}}"></input>
