--- a/fg/page_action/actions.html
+++ b/fg/page_action/actions.html
@@ -6,7 +6,7 @@
 	
 	<div style="display: inline-block; width: 100%; margin-top: 30px; margin-bottom: 30px;">
 
-		<div class="text-section-header-small" style="margin-left: 12px;" ng-show="groups.length">Add to group</div>
+		<div class="text-section-header-small" style="margin-left: 12px;" ng-show="groups.length">Group management</div>
 		
 		<form style="margin-top: 20px;margin-bottom: 70px;" ng-submit="addSite()" ng-show="groups.length">
 			
