--- a/fg/page_action/lists.html
+++ b/fg/page_action/lists.html
@@ -1,14 +1,40 @@
 <div class="panel-section" ng-repeat="item in data track by item.name" ng-if="item.scripts.length" style="display: block;">
 
 	<h4> Included from {{ key }} {{ item.name }}  <bdi style="color:red" ng-click="item.toggleList()">{{ item.listState() }}</bdi> </h4>
-  
-	<script-index
-		ng-show="item.visible"
-		list="item.scripts"
-		editor="page.bg.editor_mgr.openEditorInstanceForScript"
-		shown="[]"
-		opts="page.bg.option_mgr.editor"
-		external="true">
-	</script-index>
-  
+
+	<table style="margin-bottom: 30px;width: 100%;" ng-show="item.visible">
+		<thead>
+			<th style="min-width: 30%;">
+				Name
+			</th>
+			<th></th>
+			<th></th>
+			<th></th>
+		</thead>
+		<tbody>
+			
+			<tr ng-repeat="script in item.scripts track by script.uuid" style="border-bottom: 1px solid black;">
+
+				<td style="min-width: 30%;">
+					<script-name script="script"> {{ script.name }} </script-name>
+				</td>
+				
+				<td style="float: left; margin-left: 5px;">
+					<button class="browser-style" ng-click="page.bg.editor_mgr.openEditorInstanceForScript(script)" style="margin-left: 5px; width: 80px; text-align: center;"> Edit </button>
+				</td>
+
+				<td style="float: left;">
+					<button class="browser-style" ng-click="script.toggleDisable()" style="margin-left: 5px; width: 80px; text-align: center;"> {{ script.disabled ? "Enable" : "Disable" }} </button>
+				</td>
+
+				<td style="float: left; margin-left: 5px;" ng-if="!script.parent.isGroup()">
+					<button class="browser-style" ng-click="remove(script)" style="margin-left: 5px; width: 80px; text-align: center;"> Remove </button>
+				</td>
+				
+			</tr>
+			
+		</tbody>
+		
+	</table>
+	
 </div>
