Policy for script Enable & Disable design and implementation ready (Alpha state).

--- a/fg/opt_page/groups.html
+++ b/fg/opt_page/groups.html
@@ -15,4 +15,6 @@
 		
 	</div>
 </div>
+
+<button ng-click="page.bg.showUnattachedEditor(null)" class="browser-style"> + </button>
 <no-info ng-if="!groups.length"></no-info>
