--- a/fg/page_action/actions.html
+++ b/fg/page_action/actions.html
@@ -12,7 +12,6 @@
 			
 			<label class="input" style="min-width: 60%; padding-left: 10px;">
 				
-			<!-- <span> <strong> {{ action == "Remove" ? "Removing" : "Adding" }}: </strong> </span> -->
 				<site-validator style="width:55%;" ev="events" url="url"> </site-validator>
 				
 			</label>
@@ -30,7 +29,7 @@
 			</div>
 		</form>
 
-		<div class="bottom-bucket" style="padding-left: 27%;"> <!-- !!! -->
+		<div class="bottom-bucket" style="padding-left: 27%;"> <!-- !!! center properly. -->
 			<button class="browser-style" ng-click="addScript()" style="margin-left: 30px;z-index:999;"> Add Script </button>
 			<button class="browser-style" ng-click="listenTab()" style="margin-left: 30px;z-index:999;"> Listen Tab Requests </button>
 		</div>
