--- a/fg/page_action/lists.html
+++ b/fg/page_action/lists.html
@@ -24,7 +24,9 @@
 				</td>
 
 				<td style="float: left;">
-					<button class="browser-style" ng-click="script.toggleDisableFor(url)" style="margin-left: 5px; width: 80px; text-align: center;"> {{ script.disabledAt(url) ? "Enable" : "Disable" }} </button>
+					<button class="browser-style" ng-click="script.toggleDisableFor(url)" style="margin-left: 5px; width: 80px; text-align: center;">
+						{{ script.disabledAt(url) ? "Enable" : "Disable" }}
+					</button>
 				</td>
 
 				<td style="float: left; margin-left: 5px;" ng-if="!script.parent.isGroup()">
