--- a/fg/page_action/lists.html
+++ b/fg/page_action/lists.html
@@ -16,7 +16,7 @@
 			<tr ng-repeat="script in item.scripts track by script.uuid" style="border-bottom: 1px solid black;">
 
 				<td style="min-width: 30%;">
-					<script-name script="script"> {{ script.name }} </script-name>
+					<script-name script="script"></script-name>
 				</td>
 				
 				<td style="float: left; margin-left: 5px;">
