Tab Listener: Request body available, port listener not being disconnected on view on wdw close.

--- a/fg/page_action/pa.html
+++ b/fg/page_action/pa.html
@@ -28,7 +28,7 @@
   <body ng-controller="siteController" ui-sref="pa-site" spellcheck="false" ng-cloak>
 	  
 	  <div class="panel-section panel-section-header">
-		  <div class="text-section-header">JSLoader</div>
+		  <div class="text-section-header">JSLoader at {{ hostname }}</div>
 	  </div>
 	  
 	  <div ng-show="user_info">
