Tab Listener: Only one instance at a time, runtime.Port moved to EventListener

--- a/fg/listener/listener.html
+++ b/fg/listener/listener.html
@@ -29,11 +29,11 @@
 	<div id="listener-header" class="panel-section panel-section-header header">
 	  
 	  <div class="header-title text-section-header">
-		<div class="header-title-text"> {{label}} || 
-		  <span>
-			<bdi id="listening_to"> Listening to tab <strong> {{ tabId }} </strong> </bdi>
-		  </span>
-		</div>
+		  <div class="header-title-text"> 
+			  <span>
+				  <bdi id="listening_to"> {{ url }} in tab <strong> {{ tabId }} </strong> </bdi>
+			  </span>
+		  </div>
 	  </div>
 	  
 	  <div class="filter-bucket">
