--- a/fg/page_action/groups.html
+++ b/fg/page_action/groups.html
@@ -1,14 +1,8 @@
-<div ng-if="groups.length">
+<div>
+
+	<dd-title val="'groups_active'" text="'Groups'"></dd-title>
 	
-	<div class="panel-section panel-section-header" style="display: inline-block; width: 100%;"> 
-		<div class="text-section-header-mod">Group management
-			<button ng-class="groups_active ? 'ddbutton-shown' : 'ddbutton-hidden'" ng-click="toggleGroups($event)" style="border: 0; background: transparent;">
-				<img style="vertical-align: sub;" src="../icons/right-arrow-64.png" width="20px" height="20px" alt="submit" />
-			</button>
-		</div>
-	</div>
-	
-	<div style="display: inline-block; width: 100%; margin-top: 30px;" ng-show="groups_active">
+	<div style="display: inline-block; width: 100%; margin-top: 30px;" ng-show="groups_active" ng-if="groups.length">
 		
 		<form style="margin-top: 20px;margin-bottom: 70px;" ng-submit="addSite()" ng-show="groups.length">
 			
@@ -29,7 +23,10 @@
 				
 				<button class="browser-style" ng-click="addSite()"> {{action}} Site </button>
 			</div>
-		</form>
-		
+		</form>	
+
+		<div class="bottom-bucket" style="padding-left: 33%;margin-top: 30px;"> <!-- !!! center properly. -->
+			<button class="browser-style" ng-click="page.bg.showUnattachedEditor(null)" style="margin-left: 30px;z-index:999;"> Create Group </button>
+		</div>
 	</div>
 </div>
