--- a/fg/page_action/rules.html
+++ b/fg/page_action/rules.html
@@ -1,7 +1,13 @@
-<div>
-	<dd-title val="'rules_active'" text="'Rules'"></dd-title>
+<div class="panel-section">
+	
+	<div class="panel-section-header" style="display: inline-block; width: 100%;">
 		
-	<div class="bottom-bucket" style="padding-left: 33%;margin-top: 30px;" ng-show="rules_active""> <!-- !!! center properly. -->
-		<button class="browser-style" ng-click="page.bg.listenRequestsForCurrentTab()" style="margin-left: 30px;z-index:999;"> Listen Tab Requests </button>
-	</div>	
+		<dd-title val="'rules_active'" text="'Rules'"></dd-title>
+		
+		<div class="bottom-bucket" style="padding-left: 33%;margin-top: 30px;" ng-show="rules_active""> <!-- !!! center properly. -->
+			<button class="browser-style" ng-click="page.bg.listenRequestsForCurrentTab()" style="margin-left: 30px;z-index:999;"> Listen Tab Requests </button>
+		</div>	
+		
+	</div>
+
 </div>
