--- a/fg/opt_page/proxy-settings.html
+++ b/fg/opt_page/proxy-settings.html
@@ -85,11 +85,11 @@
 			
 			<div style="text-align: center;">
 				<button class="browser-style"
-					ng-click="addProxy(proxy)"
+					ng-click="addProxy()"
 					style="z-index:999;"> Add proxy
 				</button>
 				<button class="browser-style"
-					ng-click="persistProxys(proxy)"
+					ng-click="persistProxys()"
 					style="z-index:999;"> Persist proxys
 				</button>
 			</div>
