--- a/fg/opt_page/proxy-settings.html
+++ b/fg/opt_page/proxy-settings.html
@@ -72,9 +72,10 @@
 
 							<td class="browser-style" style="margin-left: 5px;text-align: center;">
 								
-								<button class="browser-style"
+								<button style="border: 0; background: transparent;"
 									ng-click="removeProxy($index)"
-									style="z-index:999;"> X
+									style="z-index:999;">
+									<img src="../icons/ko_tick.png" width="24px" height="24px">
 								</button>
 								
 							</td>
