Option Page: Storage area, missing new functionalities

--- a/fg/opt_page/options.html
+++ b/fg/opt_page/options.html
@@ -57,7 +57,7 @@
 			
 		</div>
 		
-		<div ui-view="debug"></div>
+		<!-- <div ui-view="debug"></div> -->
 		
 		<script src="../deps/json/json-formatter.js"></script>
 		<script src="options.js"></script>
