Options page: data ready

--- a/fg/editor/editor.html
+++ b/fg/editor/editor.html
@@ -23,7 +23,7 @@
 	  
   </head>
   
-  <body spellcheck=false ng-controller="editorController as editor" ng-click="buttonToggle($event)" ng-cloak> <!-- ng-angular-ready -->
+  <body spellcheck=false ng-controller="editorController as editor" ng-click="buttonToggle($event)" ng-cloak>
 	  
 	  <bdi id="dropdown-header" ng-click="dropdownClick($event)">{{dd_text}}</bdi>
 	  <div id="editor-header" class="panel-section panel-section-header">
