Option Page: first version.

--- a/fg/opt_page/app-data.html
+++ b/fg/opt_page/app-data.html
@@ -1,9 +1,7 @@
-<div class="panel-section">
-	
-	<div class="panel-section-header">
-		
+<div>	
+	<div>
 		<dd-title val="'appdata_active'" text="'Storage'"></dd-title>
-
+		
 		<div ng-show="appdata_active">
 
 			<table style="display: table" ng-if="domains.length || groups.length">
@@ -106,10 +104,6 @@
 				<button class="browser-style"
 					ng-click="editUserDefs()"
 					style="z-index:999;"> Edit User Defs
-				</button>
-				<button class="browser-style"
-					ng-click="editGlobals()"
-					style="z-index:999;"> Edit Globals
 				</button>
 			</div>
 			
