--- a/fg/opt_page/editor-settings.html
+++ b/fg/opt_page/editor-settings.html
@@ -1,6 +1,5 @@
-<div class="panel-section">
-	
-	<div class="panel-section-header">
+<div>
+	<div>
 		
 		<dd-title val="'editor_active'" text="'Editor settings'"></dd-title>
 		
@@ -51,14 +50,6 @@
 			</table>
 			
 			<ace-inline h="260" w="1024" style="margin-left: 10%;"></ace-inline>
-
-			<div style="text-align: center;">
-				<button class="browser-style"
-					ng-click="persistEditor()"
-					style="z-index:999;"> Persist editor
-				</button>
-			</div>
-			
 		</div>
 	</div>
 </div>
