--- a/fg/opt_page/app-db.html
+++ b/fg/opt_page/app-db.html
@@ -1,6 +1,6 @@
-<div class="panel-section">
+<div>
 	
-	<div class="panel-section-header">
+	<div>
 		
 		<dd-title val="'appdb_active'" text="'Database'"></dd-title>
 
@@ -19,17 +19,18 @@
 					<tbody style="display: table-row-group;">
 						<tr>
 							<td style="width: 20%;">
-								<h2 style="float: right;margin-right: 100px;"> Data origin: </h2>
+								<h3 style="float: right;margin-right: 100px;"> Data origin: </h3>
 							</td>
 							<td style="width: 60%;">	
 								<input
 									style="width: 100%;"
 									class="browser-style"
 									id="data-origin-inpt"
-									type="text"
+									type="password"
 									ng-model="data_origin.string"
 									ng-change ="validateConnection()"
-									ng-disabled="in_progress"/>
+									ng-disabled="in_progress"
+									info-protected/>
 							</td>
 							<td style="text-align: center; width: 10%;padding: 55px">
 								<div style="width: 40px;height: 40px;">
@@ -53,7 +54,7 @@
 						</tr>
 						<tr ng-show="data_origin.connected && data_origin.readable">
 							<td style="width: 20%;">
-								<h2 style="float: right;margin-right: 100px;"> Query DB: </h2>
+								<h3 style="float: right;margin-right: 100px;"> Query DB: </h3>
 							</td>
 							<td style="width: 60%;">
 								<input
