--- a/fg/page_action/groups.html
+++ b/fg/page_action/groups.html
@@ -1,6 +1,6 @@
 <div class="panel-section">
 
-	<div class="panel-section-header" style="display: inline-block; width: 100%;">
+	<div style="width: 100%;">
 		
 		<dd-title val="'groups_active'" text="'Groups'"></dd-title>
 		
@@ -27,8 +27,8 @@
 				</div>
 			</form>	
 
-			<div class="bottom-bucket" style="padding-left: 33%;margin-top: 30px;"> <!-- !!! center properly. -->
-				<button class="browser-style" ng-click="page.bg.showUnattachedEditor(null)" style="margin-left: 30px;z-index:999;"> Create Group </button>
+			<div class="bottom-bucket" style="text-align: center; margin: 0;">
+				<button class="browser-style" ng-click="page.bg.showUnattachedEditor(null)"> Create Group </button>
 			</div>
 		</div>
 	</div>
