--- a/fg/page_action/lists.html
+++ b/fg/page_action/lists.html
@@ -1,10 +1,10 @@
-<div class="panel-section" ng-repeat="item in data track by item.name" ng-if="item.scripts.length" style="display: block;margin-left: 10px;">
+<div class="panel-section" ng-repeat="item in data track by item.name" ng-if="item.scripts.length" style="display: block;margin-left: 20px;">
 
 	<h4> Included from {{ key }} {{ item.name }}
 		<drop-down item="item" width="16" height="16"></drop-down>
 	</h4>
 	
-	<table style="margin-bottom: 30px;width: 100%;" ng-show="item.visible">
+	<table style="margin-bottom: 30px;width: 100%;display: table;margin-left: 20px;" ng-show="item.visible">
 		<thead>
 			<th style="min-width: 30%;">
 				Name
@@ -17,7 +17,7 @@
 			<th></th>
 			<th></th>
 		</thead>
-		<tbody>
+		<tbody style="display: table-row-group;">
 			
 			<tr ng-repeat="script in item.scripts track by script.uuid" style="border-bottom: 1px solid black;">
 
