Empty div placeholder added, some bugs detected.

--- a/fg/opt_page/options.html
+++ b/fg/opt_page/options.html
@@ -5,7 +5,7 @@
 		
 		<link rel="stylesheet" href="options.css"/>
 		
-		<meta charset="utf-8" http-equiv="Content-Security-Policy" content="script-src 'self' * 'unsafe-eval'; object-src 'self'; img-src 'self';">
+		<meta charset="utf-8" http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-eval'; object-src 'self'; img-src 'self';">
 		
 		<link rel="stylesheet" href="chrome://browser/content/extension.css">
 		<link rel="stylesheet" href="../styles/jsl.css">
