--- a/fg/page_action/lists.html
+++ b/fg/page_action/lists.html
@@ -1,6 +1,6 @@
 <div class="panel-section" ng-repeat="item in data track by item.name" ng-if="item.scripts.length" style="display: block;margin-left: 20px;">
 
-	<h4> Included from {{ key }} {{ item.name }}
+	<h4> Included from {{ key }} "{{ item.name }}"
 		<drop-down item="item" width="16" height="16"></drop-down>
 	</h4>
 	
