--- a/fg/opt_page/app-data.html
+++ b/fg/opt_page/app-data.html
@@ -77,7 +77,7 @@
 					</tr>
 				</tbody>
 			</table>
-			
+			<no-info ng-if="!domains.length && !groups.length"></no-info>
 			<div style="text-align: center;margin-top: 25px;">
 				<label for="import_data"
 					<bdi> Import Data </bdi>
