Styles version 1, OP page refactor done.

--- a/fg/opt_page/app-data.html
+++ b/fg/opt_page/app-data.html
@@ -15,7 +15,7 @@
 				<tbody style="display: table-row-group;">
 					<tr ng-repeat="domain in domains track by domain.name">
 						<td>
-							<h2 ng-if="!$index" style="margin: 0;"> Domains: </h2>
+							<h2 ng-if="!$index" style="margin: 0;margin-left: 50px;"> Domains: </h2>
 						</td>
 						<td style="text-align: center;">
 							{{ domain.name }}
@@ -48,7 +48,7 @@
 					</tr><br>
 					<tr ng-repeat="group in groups track by group.name">
 						<td>
-							<h2 ng-if="!$index" style="margin: 0;"> Groups: </h2>
+							<h2 ng-if="!$index" style="margin: 0;margin-left: 50px;"> Groups: </h2>
 						</td>
 						<td style="text-align: center;">
 							{{ group.name }}
