--- a/fg/opt_page/editor-settings.html
+++ b/fg/opt_page/editor-settings.html
@@ -48,8 +48,12 @@
 					</tr>
 				</tbody>
 			</table>
+
+			<!-- ?!! -->
+			<div style="width: 1024px; margin: auto;">
+				<ace-inline h="260" w="1024"></ace-inline>
+			</div>
 			
-			<ace-inline h="260" w="1024" style="margin-left: 10%;"></ace-inline>
 		</div>
 	</div>
 </div>
