--- a/fg/page_action/lists.html
+++ b/fg/page_action/lists.html
@@ -1,6 +1,6 @@
 <div class="panel-section" ng-repeat="item in data track by item.name" ng-if="item.scripts.length" style="display: block;margin-left: 20px;">
 
-	<h4> Included from {{ key }} "{{ item.name }}"
+	<h4> {{ key }} "{{ item.name }}"
 		<drop-down item="item" width="16" height="16"></drop-down>
 	</h4>
 	
@@ -45,7 +45,7 @@
 					<button class="browser-style" ng-click="page.bg.editor_mgr.openEditorInstanceForScript(script)" style="margin-left: 5px; width: 80px; text-align: center;"> Edit </button>
 				</td>
 
-				<td style="float: left; margin-left: 5px;" ng-if="!script.parent.isGroup()">
+				<td style="float: left; margin-left: 5px;">
 					<button class="browser-style" ng-click="page.remove(script)" style="margin-left: 5px; width: 80px; text-align: center;"> Remove </button>
 				</td>
 				
