Added domain actions in PA

--- a/fg/page_action/groups.html
+++ b/fg/page_action/groups.html
@@ -27,7 +27,7 @@
 				</div>
 			</form>	
 
-			<no-info ng-if="!user_info" text="'No Groups'" ng-if="!groups.length"></no-info>
+			<no-info text="'No Groups'" ng-if="!groups.length"></no-info>
 			
 			<div id="button-bottom" class="bottom-bucket" style="text-align: center; margin: 0;">
 				<button class="browser-style" ng-click="page.bg.showUnattachedEditor(null)"> Create Group </button>
