Added watchers and update service for opt page.

--- a/fg/opt_page/options.html
+++ b/fg/opt_page/options.html
@@ -17,8 +17,8 @@
 		<script src="../partials/partials.js"></script>
 		
 		<script src="../../utils/jsloader-utils.js"></script>
-		<!-- <script src="../../utils/deps/async.min.js"></script>
-		<script src="../../utils/deps/underscore-min.js"></script> -->
+		<!-- <script src="../../utils/deps/async.min.js"></script> -->
+		<script src="../../utils/deps/underscore-min.js"></script>
 		<script src="../../utils/deps/EventEmitter/EventEmitter.min.js"></script>
 		
 	</head>
