--- a/fg/editor/editor.html
+++ b/fg/editor/editor.html
@@ -30,11 +30,11 @@
 	  <div id="editor-header" class="panel-section panel-section-header">
 		  <div class="text-section-header"> <script-name script="script" onlyval="true"></script-name> || 
 			  
-			  <span>
-				  <bdi id="user_action" class="bold"> {{user_action}} </bdi>
-				  <site-validator ng-if="!script.parent.isGroup()" ev="page.events" url="url"> </site-validator>
-				  <group-validator ng-if="script.parent.isGroup()" ev="page.events" group="url"> </group-validator>
-			  </span>
+			  <div style="width: 80%;display: inline-block">
+				  <bdi id="user_action" class="bold" style="display: inline; width: 20%;margin: 0;"> {{user_action}} </bdi>
+				  <site-validator style="display: inline-block; width: 80%;margin: 0;" ng-if="!script.parent.isGroup()" ev="page.events" url="url"> </site-validator>
+				  <group-validator style="display: inline-block" ng-if="script.parent.isGroup()" ev="page.events" group="url"> </group-validator>
+			  </div>
 		  </div>
 	  </div>
 	  
