To new URL pattern, Update parent fails, domain groups with path fails.

--- a/fg/editor/editor.html
+++ b/fg/editor/editor.html
@@ -28,7 +28,7 @@
 	  </div>
 	  
 	  <div id="editor-header" class="panel-section panel-section-header">
-		  <div class="text-section-header"> <script-name script="script" onlyval="true"></script-name> || 
+		  <div class="text-section-header" style="display: inline-block;width: 100%"> <script-name script="script" onlyval="true" style="width: 15%;display: inline-block;"></script-name> || 
 			  
 			  <div style="width: 80%;display: inline-block">
 				  <bdi id="user_action" class="bold" style="display: inline; width: 20%;margin: 0;"> {{user_action}} </bdi>
