new pattern matching includedAt & disabledAt to be reviewed

--- a/fg/page_action/lists.html
+++ b/fg/page_action/lists.html
@@ -22,7 +22,7 @@
 			<tr ng-repeat="script in item.scripts track by script.uuid" style="border-bottom: 1px solid black;">
 
 				<td style="min-width: 30%;">
-					<script-name script="script"></script-name>
+					<script-name script="script" style="margin-right: 20px;"></script-name>
 				</td>
 				
 				<td style="float: left;margin-left: 10px;padding-right: 30px;">
